--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+title: Bhargavi Ponduri
+description: > # your text below (remove <br> elements if you don't need line breaks)
+ Senior Frontend Engineer
+  <br><br>
+  <a href="mailto:aashima.ahuja811@gmail.com">aashima.ahuja811@gmail.com </a>
+  <br>
+  <a href="https://www.linkedin.com/in/aashimaahuja/">LinkedIn Profile</a>
+  <br>
+  <a href="https://www.gihub.com/aashimaahuja/">Gihub</a> 
 theme: jekyll-theme-minimal
