--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Bhargavi Ponduri
+logo: "/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
  Senior Frontend Engineer
   <br><br>
